# study_langchain_2

./: README.md  pyproject.toml
LangChain/Embedding/Postgres/: PGVector.ipynb  PostgresEmbedding.ipynb
LangChain/Privacy_Safety/: 02.Constitutional_Chain.ipynb
LangChain/evaluatation/ComparisonEvaluators/: 01.Pairwise_string_comparison.ipynb  02.Pairwise_embedding_distance.ipynb  03.Custom_pairwise_evaluator.ipynb
LangChain/evaluatation/Examples/: 01.ComparingChainOutputs.ipynb
LangChain/evaluatation/StringEvaluators/: 01.Criteria_Evaluation.ipynb  02.Custom_String_Evaluator.ipynb  03.Embedding_Distance.ipynb  04.Exact_Match.ipynb  05.JSON_Evaluators.ipynb  06.Regex_Match.ipynb  07.Scoring_Evaluator.ipynb  08.String_Distance.ipynb
LangChain/evaluatation/TrajectoryEvaluators/: 01.Custom_Trajectory_Evaluator.ipynb  02.Agent_Trajectory.ipynb
Langfuse/CookBook/: 01.datasets.ipynb  02.ragas.ipynb  03.Langchain_Evaluations.ipynb
Langfuse/Integrations/: example_LangChain.ipynb  example_LangGraph.ipynb  example_Tracing.ipynb
Langfuse/Monitor/: Evaluation_pipeline.ipynb
Langfuse/Qiita/: step1.ipynb  step1_1.py  step1_2.py
Langfuse/Qiita2/: step1.ipynb  tmp.txt
Langfuse/zenn/: streamlit.py
