[tool.poetry]
name = "langchain-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
openai = "^1.40.8"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
langchain = "^0.2.14"
langchain-openai = "^0.1.21"
langsmith = "^0.1.99"
ipykernel = "^6.29.5"
langchainhub = "^0.1.21"
langchain-community = "^0.2.12"
langgraph = "^0.2.4"
langchain-experimental = "^0.0.64"
langfuse = "^2.43.3"
langchain-chroma = "^0.1.2"
selenium = "^4.23.1"
unstructured = "^0.15.5"
pandas = "^2.2.2"
wikipedia = "^1.4.0"
streamlit = "^1.37.1"
faiss-cpu = "^1.8.0.post1"
evaluate = "^0.4.2"
transformers = "^4.44.0"
torch = "^2.4.0"
sentence-transformers = "^3.0.1"
rapidfuzz = "^3.9.6"
psycopg2-binary = "^2.9.9"
tiktoken = "^0.7.0"
langchain-postgres = "^0.0.9"
psycopg-binary = "^3.2.1"
graphviz = "^0.20.3"
deepeval = "^1.1.2"
datasets = "^2.21.0"
ragas = "^0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
